--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Boxiting main</h1>
+    <h1>Boxiting main page</h1>
     <div>안녕, 나랑 대련할래?</div>
 </body>
 </html>
